Change log
==========

2.1 (unreleased)
----------------


2.0 (2019-03-28)
----------------
- make sure ``zcache.aggregateKey`` does not create unsuitable MemCache keys

- allow storing values that don't conform to ``IMemCacheMapping``

- add ability to set a title for a MemCacheZCacheManager

- Python 3 compatibility

- switch to the ``python-memcached`` library and remove the old ``memcache``
  library module inside this package, which is actually a really old version
  of ``python-memcached``.

Possible breaking change
~~~~~~~~~~~~~~~~~~~~~~~~
The objects returned by Zope's session data manager are implicitly expected
to support Acquisition. Zope's session data manager uses it to insert itself
into the object's acquisition chain. However, under Python 3 Acquisition can
no longer be supported by the session data objects due to a metaclass conflict
between the classes ``permisstence.mapping.PersistentMapping`` and
``Acquisition.Explicit``. This may break expectations for code consuming the
session data objects from this package.


1.0 (2019-03-28)
----------------
- Zope 4 compatibility

- documentation using Sphinx

- ``tox`` configuration for unit, coverage and code quality tests

- package configuration cleanup

- full ``flake8`` compliance

- add ability to set a title for a MemcacheProxy

- add ability to set a title for a MemcacheSessionDataContainer


0.2b3 (2011-11-21)
------------------
- Extend MANIFEST.in to include other missing files (.gif, .pt, .txt)


0.2b2 (2011-11-21)
------------------
- Fix source distribution by including README.txt and CHANGES.txt via
  manifest.

- Include test runner in buildout and fix broken tests.


0.2b1 (2011-11-19)
------------------
- Turn product into an egg and release on PyPI.

- Implement a forced refresh of the in-process cache of memcache data at the
  end of transactions to avoid stale data.

- mapping.py: Added 'getContainerKey' method to 'MemCacheMapping' in